Bug 1876150 - Filter out collapsed XUL menus when concatinating text ranges. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D205391